--- a/AdminAgropet/Agropet.Master
+++ b/AdminAgropet/Agropet.Master
@@ -5,7 +5,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head id="head1" runat="server">
 
-    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8, IE=Edge, IE=EmulateIE9, IE=EmulateIE10" />
+    <meta http-equiv='X-UA-Compatible'content="IE=9; IE=8; IE=7; IE=EDGE, chrome=1" />
+
     <link rel="stylesheet" type="text/css" href="<%# ResolveUrl("~/CSS/Grid.css") %>" />
     <link rel="stylesheet" type="text/css" href="<%# ResolveUrl("~/CSS/EstiloValidaciones.css") %>" />
     <link rel="stylesheet" type="text/css" href="<%# ResolveUrl("~/CSS/Estilo.css") %>" />
@@ -15,14 +16,19 @@
     <link rel="stylesheet" type="text/css" href="<%# ResolveUrl("~/CSS/jquery.ui.dialog.min.css") %>" />
     <link rel="Stylesheet" type="text/css" href="<%# ResolveUrl("~/CSS/jquery.ui.core.css") %>" />
     <link rel="stylesheet" type="text/css" href="<%# ResolveUrl("~/CSS/jquery-ui.min.css") %>" />
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/CSS/TreeView.css" rel="stylesheet" />
+    <link href="~/CSS/EstiloCheckBox.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link href="~/CSS/Paginacion.css" rel="stylesheet" />
     <%--<link href="~/CSS/DateTimePicker/StyleDateTimePicker.css" rel="stylesheet" />--%>
     <title>--> Módulo de administración de Agropet <-- </title>
 
     <!-- Inicia registro scripts -->
-    <script src="<%# ResolveUrl("~/JS/jquery-1.9.1.min.js") %>" type="text/javascript"></script>
-    <script src="<%# ResolveUrl("~/JS/jquery-1.8.3.min.js") %>" type="text/javascript"></script>
+    <script src="Scripts/modernizr-2.8.3.js"  type="text/javascript"></script>
+    <script src="Scripts/jquery-1.9.1.js" type="text/javascript"></script>
+    <script src="Scripts/bootstrap.js" type="text/javascript"></script>
+   <%-- <script src="<%# ResolveUrl("~/JS/jquery-1.9.1.min.js") %>" type="text/javascript"></script>--%>
+  <%--  <script src="<%# ResolveUrl("~/JS/jquery-1.8.3.min.js") %>" type="text/javascript"></script>--%>
     <script src="<%# ResolveUrl("~/JS/DDLuc.js") %>" type="text/javascript"></script>
     <script src="<%# ResolveUrl("~/JS/jquery.mask.min.js") %>" type="text/javascript"></script>
     <script src="<%# ResolveUrl("~/JS/jquery.topbar.js") %>" type="text/javascript"></script>
@@ -34,9 +40,11 @@
     <script src="<%# ResolveUrl("~/JS/jquery.ui.widget.min.js") %>" type="text/javascript"></script>
     <script src="<%# ResolveUrl("~/JS/funcionesJS.js") %>" type="text/javascript"></script>
     <script src="<%# ResolveUrl("~/JS/UtileriasJSSCR.js") %>" type="text/javascript"></script>
+  
     <script src="~/JS/DateTimePicker/jquery-ui-timepicker-addon.min.js" type="text/javascript"></script>
     <script src="~/JS/DateTimePicker/jquery-ui-sliderAccess.js" type="text/javascript"></script>
     <script src="~/JS/DateTimePicker/jquery-ui-datepicker.regional_es.js" type="text/javascript"></script>
+
 <%--    <script src="~/JS/DateTimePicker/jquery-ui-timepicker-addon-i18n.js" type="text/javascript"></script>--%>
     <!-- Termina registro scripts -->
 
