--- a/AdminAgropet/CSS/TreeView.css
+++ b/AdminAgropet/CSS/TreeView.css
@@ -1,4 +1,47 @@
-﻿.treeNode
+﻿div.treeview {
+    min-width: 100px;
+    min-height: 100px;
+    max-height: 250px;
+    overflow: auto;
+    padding: 8px;
+    border-color: lightgray !important;
+    border: solid 1px;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+}
+
+    div.treeview table {
+        margin-top: 0.15em;
+    }
+
+
+    div.treeview td:hover {
+        background-color: lightgray;
+    }
+
+    div.treeview a {
+        padding: 0px;
+        background-color: transparent;
+    }
+
+        div.treeview a:hover {
+            color: black;
+            text-decoration: none;
+            text-shadow: none;
+        }
+
+.nodoTreeView {
+    padding: 4px;
+    border: solid;
+    border-color: lightgray;
+    border-width: 1px;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+}
+
+/*.treeNode
 {
 	color: #585858;
 	font: 10px Arial, Sans-Serif;
@@ -40,4 +83,4 @@
      width:400px;
      height:515px;     
      overflow:auto;
-}
+}*/
