--- a/AdminAgropet/CSS/EstiloCheckBox.css
+++ b/AdminAgropet/CSS/EstiloCheckBox.css
@@ -455,17 +455,16 @@ input[type=checkbox] {
 
 /* SQUARED ONE */
 .squaredOne {
-	width: 28px;
-	height: 28px;
+	width: 18px;
+	height: 18px;
 	background: #fcfff4;
-
 	background: -webkit-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
 	background: -moz-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
 	background: -o-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
 	background: -ms-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
 	background: linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfff4', endColorstr='#b3bead',GradientType=0 );
-	margin: 20px auto;
+	margin: 0px auto;
 	-webkit-box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
 	-moz-box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
 	box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
@@ -475,21 +474,21 @@ input[type=checkbox] {
 .squaredOne label {
 	cursor: pointer;
 	position: absolute;
-	width: 20px;
-	height: 20px;
-	left: 4px;
-	top: 4px;
+	width: 14px;
+	height: 14px;
+	left: 2px;
+	top: 2px;
 
 	-webkit-box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,1);
 	-moz-box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,1);
 	box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,1);
 
-	background: -webkit-linear-gradient(top, #222 0%, #45484d 100%);
-	background: -moz-linear-gradient(top, #222 0%, #45484d 100%);
-	background: -o-linear-gradient(top, #222 0%, #45484d 100%);
-	background: -ms-linear-gradient(top, #222 0%, #45484d 100%);
-	background: linear-gradient(top, #222 0%, #45484d 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#222', endColorstr='#45484d',GradientType=0 );
+	background: -webkit-linear-gradient(top, #222 0%, #45484d 10%);
+	/*background: -moz-linear-gradient(top, #222 0%, #45484d 10%);
+	background: -o-linear-gradient(top, #222 0%, #45484d 10%);
+	background: -ms-linear-gradient(top, #222 0%, #45484d 10%);
+	background: linear-gradient(top, #222 0%, #45484d 10%);*/
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000', endColorstr='#45484d',GradientType=0 );
 }
 
 .squaredOne label:after {
@@ -498,18 +497,18 @@ input[type=checkbox] {
 	opacity: 0;
 	content: '';
 	position: absolute;
-	width: 16px;
-	height: 16px;
-	background: #00bf00;
+	width: 14px;
+	height: 14px;
+	background: #0000CC;
 
-	background: -webkit-linear-gradient(top, #00bf00 0%, #009400 100%);
+	/*background: -webkit-linear-gradient(top, #00bf00 0%, #009400 100%);
 	background: -moz-linear-gradient(top, #00bf00 0%, #009400 100%);
 	background: -o-linear-gradient(top, #00bf00 0%, #009400 100%);
 	background: -ms-linear-gradient(top, #00bf00 0%, #009400 100%);
-	background: linear-gradient(top, #00bf00 0%, #009400 100%);
+	background: linear-gradient(top, #00bf00 0%, #009400 100%);*/
 
-	top: 2px;
-	left: 2px;
+	top: 0px;
+	left: 0px;
 
 	-webkit-box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
 	-moz-box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
